--- a/fuel_calculator.html
+++ b/fuel_calculator.html
@@ -51,7 +51,7 @@
         </div>
         
         <!-- Přidané tlačítko -->
-        <a href="list.html" class="btn">Zpět na seznam kalkulaček</a>
+        <a href="index.html" class="btn">Zpět na seznam kalkulaček</a>
     </div>
     <script src="script.js"></script>
 </body>
