--- a/other_calculator.html
+++ b/other_calculator.html
@@ -10,7 +10,7 @@
         <h1>🔧 Stránka je ve vývoji</h1>
         <p>Na této kalkulačce pracujeme. Zkuste to prosím později.</p>
         <img src="https://media.giphy.com/media/3o7aD6XRz5vi4QRGJo/giphy.gif" alt="Stránka ve vývoji">
-        <a href="list.html" class="btn">Zpět na seznam kalkulaček</a>
+        <a href="index.html" class="btn">Zpět na seznam kalkulaček</a>
     </div>
 </body>
 </html>
